# SimpleThreadManager

./: CMakeLists.txt  README.md
TestHarness/: TestThreadManager.cpp
UnitTests/: UnitTest_ProcessControl.cpp
include/: IData.hpp  IProcess.hpp  ProcessControl.hpp  ProcessFunction.hpp  ProcessItem.hpp
src/: ProcessControl.cpp  ProcessFunction.cpp  TestThreadManager.cpp
